02-blog-page fix

--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -74,7 +74,7 @@ mixin sBlogPage()
 			p Вы купили себе дом! Время обустраивать участок. Есть куча идей для построек: из бревен, кирпичей, металла, дерева и других материалов, и все эти идеи можно воплотить с помощью навеса. В этой статье мы расскажем о 7 способах, как украсить участок, и сделать жизнь комфортнее под навесом.
 			+content-table
 			.row
-				.col-lg-9
+				.col-xl-9
 					+blog-page-item(`Входная группа`,`Навес над входной группой необходим для защиты крыльца или веранды от дождя, снега и наледи. Чтобы не образовался гололед, на котором легко поскользнуться, а также чтобы входную дверь можно было без проблем открыть, не опасаясь, что это окажется невозможным из-за завалов снега. Также навес над входной группой помогает содержать проход ко входу в дом в чистоте и сухости. Навес из поликарбоната идеально подойдет для такой роли.`)
 					+blog-page-item(`Закрытая веранда`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
 					+blog-page-item(`Открытая веранда`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
@@ -88,7 +88,7 @@ mixin sBlogPage()
 					p.mini-text Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.
 					+pic(`blog-4.jpg`,'',0)
 					+blog-page-item(`Навес для кладовой`,`Веранда, в свою очередь, поможет сохранить тепло у входной двери зимой, увеличит полезную площадь дома. Внутри веранды можно разуваться, хранить одежду, мебель. Летом высаживать рассаду или обустроить уютное место для отдыха.`)
-				.col-lg-3
+				.col-xl-3
 					+e.banners-wrap
 						+blogItem(6, `5&nbsp;причин, почему навес необходим практически каждому`)
 						+adv-item(`Акция`,`Скидка до 17% на навесы для&nbsp;автомобиля`,`Подробнее`,`1`)
