--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -289,6 +289,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		z-index: 20;
 		@include media-breakpoint-up(lg) {
 			right: rem(33);
 			bottom: rem(144);
