--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -23,7 +23,7 @@ mixin sBlog(head, title)
 				.col-md-6
 					+blogItem(3, `Навес для дома.&nbsp;7&nbsp;способов, как украсить участок и&nbsp;сделать жизнь комфортнее`)
 				.col-md-6.col-lg-4.col-xl-3
-					p Большой выбор навесов к дому
+					+adv-item(`Каталог`,`Большой выбор навесов к&nbsp;дому`,`Смотреть`,`2`)
 				.col-md-6.col-lg-8.col-xl-9
 					+blogItem(4, `8&nbsp;форм кровли для навесов`)
 				.col-md-6
@@ -31,7 +31,7 @@ mixin sBlog(head, title)
 				.col-md-6
 					+blogItem(6, `Навес для дома.&nbsp;7&nbsp;способов, как украсить участок и&nbsp;сделать жизнь комфортнее`)
 				.col-12
-					p Получите цену навеса и посмотрите, как он будет выглядеть
+					+banner-item-offer().mb-0
 				.col-md-6.col-lg-8.col-xl-9
 					+blogItem(7, `8&nbsp;форм кровли для навесов`)
 				.col-md-6.col-lg-4.col-xl-3
