--- a/sourse/pug/blocks/sBlog/_sBlog.scss
+++ b/sourse/pug/blocks/sBlog/_sBlog.scss
@@ -17,7 +17,6 @@
 			--sPB: 0;
 			--sTPB: #{rem(60)};
 		}
-
 	}
 	& > .container {
 		& > .row {
@@ -81,10 +80,10 @@
 	.content-table {
 		margin-bottom: rem(42);
 	}
-	@include media-breakpoint-up(lg) {
-		margin-bottom: rem(56);
-	}
-	margin-bottom: rem(30);
+	// @include media-breakpoint-up(lg) {
+	// 	margin-bottom: rem(56);
+	// }
+	// margin-bottom: rem(30);
 	h2 {
 		margin-bottom: rem(20);
 	}
@@ -140,7 +139,7 @@
 			justify-content: space-around;
 			height: 100%;
 		}
-		@include media-breakpoint-down(lg){
+		@include media-breakpoint-down(lg) {
 			flex-wrap: wrap;
 			justify-content: space-between;
 		}
@@ -150,10 +149,10 @@
 			margin-top: rem(20);
 			margin-bottom: rem(20);
 		}
-		@include media-breakpoint-down(lg){
+		@include media-breakpoint-down(lg) {
 			width: calc(50% - 10px);
 		}
-		@include media-breakpoint-down(sm){
+		@include media-breakpoint-down(sm) {
 			width: 100%;
 			margin-bottom: rem(20);
 		}
@@ -231,6 +230,19 @@
 		.banner-item__caption {
 			margin-bottom: rem(24);
 			text-align: left;
+		}
+		picture {
+			@include media-breakpoint-down(xl) {
+				&::before {
+					content: "";
+					position: absolute;
+					width: 100%;
+					height: 100%;
+					left: 0;
+					top: 0;
+					background-color: rgba($color: $secondary, $alpha: 0.25);
+				}
+			}
 		}
 	}
 }
