--- a/sourse/pug/blocks/sFilter/_sFilter.pug
+++ b/sourse/pug/blocks/sFilter/_sFilter.pug
@@ -13,8 +13,8 @@ mixin sFilter(data)
 	// start sFilter
 	+b.sFilter&attributes(attributes)
 		.dd-group-js
-			.dd-head-js.d-flex.d-lg-none
-				| Сортировать
+			.dd-head-js.d-flex.d-lg-none.justify-content-between
+				| Показать фильтры
 				+icon('chevron-down')
 			+e.wrap.dd-content-js
 				+e.title
