--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
@@ -1,7 +1,7 @@
 mixin sSpecifications(btn)
 	// start sSpecifications
-	+b.SECTION.sSpecifications.section#sSpecifications&attributes(attributes)
-		.container
+	+b.sSpecifications.section#sSpecifications&attributes(attributes)
+		+e.container.container
 			.row
 				.col-lg-8
 					+e.slider-wrap
@@ -31,8 +31,8 @@ mixin sSpecifications(btn)
 					table
 						thead
 							tr
-								th
-									h6 Характеристики
+								th(colspan="2")
+									p Характеристики
 						tbody
 							tr
 								td Металлические столбы
@@ -61,8 +61,8 @@ mixin sSpecifications(btn)
 					table
 						thead
 							tr
-								th
-									h6 Цены и сроки
+								th(colspan="2")
+									p Цены и сроки
 						tbody
 							tr
 								td Материалы • Работа
@@ -79,8 +79,8 @@ mixin sSpecifications(btn)
 	// end sSpecifications
 mixin sSpecifications2(btn)
 	// start sSpecifications
-	+b.SECTION.sSpecifications.section#sSpecifications&attributes(attributes)
-		.container
+	+b.sSpecifications.section#sSpecifications&attributes(attributes)
+		+e.container.container
 			.row
 				.col-lg-8
 					+e.slider-wrap
@@ -110,8 +110,8 @@ mixin sSpecifications2(btn)
 					table
 						thead
 							tr
-								th
-									h6 Характеристики
+								th(colspan="2")
+									p Характеристики
 						tbody
 							tr
 								td Металлические столбы
@@ -140,8 +140,8 @@ mixin sSpecifications2(btn)
 					table
 						thead
 							tr
-								th
-									h6 Цены и сроки
+								th(colspan="2")
+									p Цены и сроки
 						tbody
 							tr
 								td Материалы • Работа
@@ -158,8 +158,8 @@ mixin sSpecifications2(btn)
 	// end sSpecifications
 mixin sSpecifications3(btn)
 	// start sSpecifications
-	+b.SECTION.sSpecifications.section#sSpecifications&attributes(attributes)
-		.container
+	+b.sSpecifications.section#sSpecifications&attributes(attributes)
+		+e.container.container
 			.row
 				.col-lg-8
 					+e.slider-wrap
@@ -189,8 +189,8 @@ mixin sSpecifications3(btn)
 					table
 						thead
 							tr
-								th
-									h6 Характеристики
+								th(colspan="2")
+									p Характеристики
 						tbody
 							tr
 								td Металлические столбы
@@ -219,8 +219,8 @@ mixin sSpecifications3(btn)
 					table
 						thead
 							tr
-								th
-									h6 Цены и сроки
+								th(colspan="2")
+									p Цены и сроки
 						tbody
 							tr
 								td Материалы • Работа
