--- a/sourse/pug/blocks/sClientsReviews/_sClientsReviews.pug
+++ b/sourse/pug/blocks/sClientsReviews/_sClientsReviews.pug
@@ -13,7 +13,8 @@ mixin sClientsReviews(data)
 					+e.wrap
 						+e.profile
 							+e.profile-content
-								+e.avatar
+								+e.avatar.bg-wrap
+									//- +pic('person-1.jpg').picture-bg
 								+e.info
 									span Клиент
 									span Игорь
