--- a/sourse/pug/blocks/sCalculator/_sCalculator.pug
+++ b/sourse/pug/blocks/sCalculator/_sCalculator.pug
@@ -24,7 +24,7 @@ mixin sCalculator(data)
 								mixin slideBtn(c, t)
 									+e.slide.swiper-slide
 										+e.item
-											input.btn-check(type='radio' name="variants" id=`variant${c}` autocomplete='off')&attributes(attributes)
+											input.btn-check(type='radio' name="variants" id=`variant${c}`)&attributes(attributes)
 											label(for=`variant${c}`)
 												img(src=`img/svg/sCalculator-${c}.svg`, alt="")
 												span!= t
