--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -1,6 +1,6 @@
 mixin sCatalog(data)
 	// start sCatalog
-	+b.SECTION.sCatalog.section#sCatalog&attributes(attributes)
+	+b.SECTION.sCatalog.section&attributes(attributes)
 		.container
 			+b.section-title.text-center
 				h4 Каталог
@@ -25,7 +25,7 @@ mixin sCatalog(data)
 
 mixin sCatalogProd(data)
 	// start sCatalog
-	+b.SECTION.sCatalog--prod.section#sCatalog&attributes(attributes)
+	+b.SECTION.sCatalog--prod.section&attributes(attributes)
 		.container
 			+b.section-title.text-center
 				h2 Производим также
