--- a/sourse/pug/blocks/sPriceList/_sPriceList.pug
+++ b/sourse/pug/blocks/sPriceList/_sPriceList.pug
@@ -82,7 +82,7 @@ mixin sPriceList(data)
 										+tr(`Длина&nbsp;5&nbsp;м`, `5&nbsp;000&nbsp;₽/ферма`)
 				.col-lg-5.col-xxl-4
 					+ddGroup()
-						+ddGroupItem(`Ферма для гаражей  <span>(крыша&nbsp;и&nbsp;столбы)<span/>`)
+						+ddGroupItem(`Ферма для гаражей <span>(крыша&nbsp;и&nbsp;столбы)</span>`)
 							table
 								+tr(`4&nbsp;м`, `15&nbsp;000&nbsp;₽/ферма`)
 								+tr(`4&nbsp;м`, `15&nbsp;000&nbsp;₽/ферма`)
