--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
@@ -1,6 +1,6 @@
 mixin sSpecifications(btn)
 	// start sSpecifications
-	+b.sSpecifications.section#sSpecifications&attributes(attributes)
+	+b.sSpecifications.section&attributes(attributes)
 		+e.container.container
 			.row
 				.col-lg-8
@@ -79,7 +79,7 @@ mixin sSpecifications(btn)
 	// end sSpecifications
 mixin sSpecifications2(btn)
 	// start sSpecifications
-	+b.sSpecifications.section#sSpecifications&attributes(attributes)
+	+b.sSpecifications.section&attributes(attributes)
 		+e.container.container
 			.row
 				.col-lg-8
