--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -6,7 +6,7 @@ mixin sBlog(head, title)
 				+e.head-row.row
 					.col-lg-8.col-xl-9
 						+blogItem(1, `Навес для дома.&nbsp;7&nbsp;способов, как украсить участок и&nbsp;сделать жизнь комфортнее`)
-					.col-lg-4.col-xl-3
+					.col-lg-4.col-xl-3.d-none.d-lg-block
 						+b.categories
 							+categoryItem(`Советы <br> и&nbsp;лайфхаки`, 1).active
 							+categoryItem(`Технические <br> детали`, 2)
