--- a/sourse/pug/blocks/sAccordion/_sAccordion.scss
+++ b/sourse/pug/blocks/sAccordion/_sAccordion.scss
@@ -9,11 +9,32 @@
 		--sTPB: #{rem(58)};
 	}
 
-	@include media-breakpoint-up(xl) {}
-	@include media-breakpoint-up(lg) {}
-	@include media-breakpoint-up(md) {}
-	@include media-breakpoint-up(sm) {}
-	@include media-breakpoint-between(md, xl) {}
-	@include media-breakpoint-only(xl) {}
-	@include media-breakpoint-down(xl) {}
+	.accordion-item {
+		
+		&__head {
+			display: inline-flex;
+			&:hover, &.active {
+				h4 {
+					text-decoration: none;
+				}
+			}
+			h4 {
+				text-decoration: underline;
+			}
+		}
+	}
+	@include media-breakpoint-up(xl) {
+	}
+	@include media-breakpoint-up(lg) {
+	}
+	@include media-breakpoint-up(md) {
+	}
+	@include media-breakpoint-up(sm) {
+	}
+	@include media-breakpoint-between(md, xl) {
+	}
+	@include media-breakpoint-only(xl) {
+	}
+	@include media-breakpoint-down(xl) {
+	}
 } // end.sAccordion
