--- a/sourse/pug/blocks/sCalculator/_sCalculator.scss
+++ b/sourse/pug/blocks/sCalculator/_sCalculator.scss
@@ -162,7 +162,7 @@
 					grid-row: 2 / 3;
 					padding-bottom: rem(17);
 				}
-				
+
 				h6 {
 					margin-bottom: rem(16);
 				}
@@ -269,6 +269,9 @@
 			max-width: rem(95);
 			@include media-breakpoint-only(md) {
 				max-width: rem(116);
+			}
+			@include media-breakpoint-only(lg) {
+				max-width: rem(105);
 			}
 		}
 		&__item {
