--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -34,7 +34,7 @@ mixin catalogItem(i, h, p)
 		+pic(`catalogItem-${i}.jpg`, 'bg', 0)
 		h6!= h
 		.small!= p
-		+e.btn(href="#") Получить расчет
+		+e.btn.link-modal-js(href="#modal-call" data-title= "Получить расчет" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет." data-btn= "Получить расчет" data-pic= "2") Получить расчет
 
 mixin page-head(data)
 	+b.page-head
