--- a/sourse/pug/blocks/sContact/_sContact.pug
+++ b/sourse/pug/blocks/sContact/_sContact.pug
@@ -67,7 +67,7 @@ mixin sContact()
 								+icon('instagram-map')
 							+e.links--yt(href="#")
 								+icon('youtube')
-							+e.btn.btn.btn-primary.btn-sm(href="#")
+							+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Обратный звонок" data-text= "Оставьте свой номер телефона и&nbsp;мы&nbsp;вам перезвоним в&nbsp;течение 15&nbsp;минут." data-btn= "Запросить обратный звонок" data-pic= "2")
 								| Обратный звонок
 					+e.wrap
 						h5 Email
