--- a/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
+++ b/sourse/pug/blocks/sSpecifications/_sSpecifications.pug
@@ -73,7 +73,7 @@ mixin sSpecifications(btn)
 							tr
 								td Изготовление • Установка
 								td 7 дней • 1 день
-					a(href="#").btn.btn-primary Хочу примерно такой же
+					a.link-modal-js(href="#modal-call" data-title= "Запросить расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Запросить расчет" data-pic= "2").btn.btn-primary Хочу примерно такой же
 					if btn
 						button.btn.btn-outline-secondary Сохранить себе
 	// end sSpecifications
@@ -152,7 +152,7 @@ mixin sSpecifications2(btn)
 							tr
 								td Изготовление • Установка
 								td 7 дней • 1 день
-					a(href="#").btn.btn-primary Хочу примерно такой же
+					a.link-modal-js(href="#modal-call" data-title= "Запросить расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Запросить расчет" data-pic= "2").btn.btn-primary Хочу примерно такой же
 					if btn
 						button.btn.btn-outline-secondary Сохранить себе
 	// end sSpecifications
@@ -231,7 +231,7 @@ mixin sSpecifications3(btn)
 							tr
 								td Изготовление • Установка
 								td 7 дней • 1 день
-					a(href="#").btn.btn-primary Хочу примерно такой же
+					a.link-modal-js(href="#modal-call" data-title= "Запросить расчет похожего навеса" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;выполним расчет" data-btn= "Запросить расчет" data-pic= "2").btn.btn-primary Хочу примерно такой же
 					if btn
 						button.btn.btn-outline-secondary Сохранить себе
 	// end sSpecifications
