--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -8,7 +8,7 @@ mixin footer()
 							+icon('logo-top')
 						+b.label 
 								span Работаем с&nbsp;2012 года
-					+e.btn.btn.btn-primary.btn-sm(href="#") Вызвать замерщика 
+					+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Вызвать замерщика" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере" data-btn= "Отправить" data-pic= "1") Вызвать замерщика 
 				.col-6.col-md-4.col-lg-2.ml-lg-auto
 					h6 Компания
 					ul
