--- a/sourse/pug/pages/02-blogs.pug
+++ b/sourse/pug/pages/02-blogs.pug
@@ -33,17 +33,18 @@ block pagecontent
 	+header()
 		+top-nav()
 		+topLine()
-	+page-head-fixed({
-		title,
-		menu: 'menu',
-		search:'search'
-	})
-	+sBlog(`head`, ``)
-	+sContact()
-	.section-wrapper.section-wrapper--footer
-		+footer()
-	//- +sForm()
-	+scrollToTop()
+	.sticky-wrapper
+		+page-head-fixed({
+			title,
+			menu: 'menu',
+			search:'search'
+		})
+		+sBlog(`head`, ``)
+		+sContact()
+		.section-wrapper.section-wrapper--footer
+			+footer()
+		//- +sForm()
+		+scrollToTop()
 
 
 
