--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -155,25 +155,38 @@
 		}
 	}
 }
-
+.sticky-wrapper {
+}
 .page-head {
-	padding-top: rem(35);
+	padding-top: rem(25);
 	padding-bottom: rem(35);
 	@include media-breakpoint-up(md) {
-		padding-top: rem(40);
+		padding-top: rem(30);
 		padding-bottom: rem(40);
 	}
 	@include media-breakpoint-up(lg) {
-		padding-top: rem(70);
+		padding-top: rem(52.5);
 	}
 	&__row {
+		@include mt(0.2s);
 		align-items: center;
-		margin-bottom: rem(25);
+		margin-bottom: rem(15);
+		background-color: $white;
+		z-index: 999;
 		@include media-breakpoint-up(md) {
-			margin-bottom: rem(35);
+			margin-bottom: rem(25);
 		}
 		@include media-breakpoint-up(lg) {
-			margin-bottom: rem(45);
+			margin-bottom: rem(27.5);
+		}
+		.container {
+			margin-top: 0;
+			@include media-breakpoint-up(lg) {
+				padding-top: rem(17.5);
+				padding-bottom: rem(17.5);
+			}
+			padding-top: 10px;
+			padding-bottom: 10px;
 		}
 		// transition-duration: 0.2s;
 		.row {
@@ -187,30 +200,33 @@
 				--bs-gutter-x: #{rem(32)};
 			}
 		}
-	}
-	&__row.fixed {
-		background-color: #f2f6fc;
-		position: fixed;
-		@include media-breakpoint-up(lg) {
-			top: 64px;
-		}
-		// @include media-breakpoint-up(md) {
-		// 	top: 64px;
-		// }
-		top: 48px;
-		left: 0;
-		width: 100vw;
-		z-index: 999;
-		.container {
-			margin-top: 0;
-			@include media-breakpoint-up(lg) {
-				padding-top: rem(17.5);
-				padding-bottom: rem(17.5);
-			}
-			padding-top: 10px;
-			padding-bottom: 10px;
+		&.sticky {
+				background-color: $light;
 		}
 	}
+	// &__row.fixed {
+	// 	background-color: #f2f6fc;
+	// 	position: fixed;
+	// 	@include media-breakpoint-up(lg) {
+	// 		top: 64px;
+	// 	}
+	// 	// @include media-breakpoint-up(md) {
+	// 	// 	top: 64px;
+	// 	// }
+	// 	top: 48px;
+	// 	left: 0;
+	// 	width: 100vw;
+	// 	z-index: 999;
+	// 	// .container {
+	// 	// 	margin-top: 0;
+	// 	// 	@include media-breakpoint-up(lg) {
+	// 	// 		padding-top: rem(17.5);
+	// 	// 		padding-bottom: rem(17.5);
+	// 	// 	}
+	// 	// 	padding-top: 10px;
+	// 	// 	padding-bottom: 10px;
+	// 	// }
+	// }
 	&__arrow-back {
 		color: $secondary;
 		// margin-bottom: rem(25);
