--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -104,9 +104,9 @@ body {
 	// width: 100%;
 	// height: 100vh;
 	// height: calc(var(--vh, 1vh) * 100);
-	padding-top: rem(48);
+	margin-top: rem(48);
 	@include media-breakpoint-up(lg) {
-		padding-top: rem(64);
+		margin-top: rem(64);
 	}
 }
 // .main-wrapper__inner{
