--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -103,7 +103,7 @@ mixin banner-item()
 	+b.banner-item.bg-wrap&attributes(attributes)
 		+pic(`banner-item.jpg`,'',0).picture-bg
 		+e.title Обратная связь
-		+e.caption Задайте свой<br>вопрос в Вотсапе
+		+e.caption Напишите свой<br>вопрос в Whatsapp
 		+e.btn(href="#") Написать
 
 mixin banner-item-offer-center()
