--- a/sourse/pug/blocks/sTypical/_sTypical.scss
+++ b/sourse/pug/blocks/sTypical/_sTypical.scss
@@ -133,6 +133,9 @@
 		// 	max-width: 100%;
 		// }
 	}
+	&__img-wrap {
+		cursor: pointer;
+	}
 	&__item {
 		position: relative;
 		display: flex;
@@ -188,10 +191,10 @@
 	}
 	&__btn {
 		@extend .btn, .btn-primary, .btn-sm;
-		&:after {
-			content: "";
-			@include a-cent;
-		}
+		// &:after {
+		// 	content: "";
+		// 	@include a-cent;
+		// }
 	}
 	@include media-breakpoint-up(xl) {
 	}
