--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -7,7 +7,7 @@ mixin footer()
 						+b.logo(href="/")
 							+icon('logo-top')
 						+b.label 
-								span Работаем с&nbsp;2012 года
+								span Строим навесы с&nbsp;2019&nbsp;года
 					+e.btn.btn.btn-primary.btn-sm.link-modal-js(href="#modal-call" data-title= "Вызвать замерщика" data-text= "Оставьте свой номер телефона, мы&nbsp;вам перезвоним и&nbsp;договоримся о&nbsp;замере" data-btn= "Отправить" data-pic= "1") Вызвать замерщика 
 				.col-6.col-md-4.col-lg-2.ml-lg-auto
 					h6 Компания
@@ -47,7 +47,7 @@ mixin footer()
 						li
 							a(href="#") Заезды на участок
 						li
-							a(href="#") Укладка тротуарной плитки
+							a(href="#") Мощение
 						li
 							a(href="#") Ворота откатные и распашные
 						li
