--- a/sourse/pug/blocks/sAbout/_sAbout.pug
+++ b/sourse/pug/blocks/sAbout/_sAbout.pug
@@ -4,7 +4,7 @@ mixin sAbout(data)
 		.container
 			+b.section-title.text-center
 				h4 О компании
-				h2 Работаем с 2012 года. Собственное производство. Сертификаты качества.
+				h2 Строим навесы с&nbsp;2019&nbsp;года. Собственное производство. Сертификаты качества.
 			+e.slider-wrapper
 				+arrow
 				+e.slider--js.swiper
