--- a/sourse/pug/blocks/sAdvantages/_sAdvantages.pug
+++ b/sourse/pug/blocks/sAdvantages/_sAdvantages.pug
@@ -11,7 +11,7 @@ mixin sAdvantages(data)
 							p!= p
 				+sAdvantagesItem(1, `6&nbsp;цехов <br> производства`, `Быстрое изготовление и&nbsp;доставка из&nbsp;ближайшего цеха`)
 				+sAdvantagesItem(2, `Соблюдаем СП, <br> СНИП и&nbsp;ГОСТ`, `Имеем все необходимые сертификаты качества`)
-				+sAdvantagesItem(3, `Предоплата <br> всего&nbsp;50%`, `50% за&nbsp;материалы до&nbsp;начала работ, 50%&nbsp;&mdash; по&nbsp;завершению`)
+				+sAdvantagesItem(3, `Предоплата <br> всего&nbsp;50%`, `50% на&nbsp;материалы до&nbsp;начала работ, 50%&nbsp;&mdash; по&nbsp;завершению`)
 				+sAdvantagesItem(4, `Бесплатный замер, <br> смета и&nbsp;3D-макет`, `Узнайте заранее внешний вид и&nbsp;цену будущего навеса`)
-				+sAdvantagesItem(5, `Гарантия на <br> навес 1&nbsp;год`, `Починим или заменим за&nbsp;свой счет в&nbsp;случае брака`)
+				+sAdvantagesItem(5, `Гарантия на <br> навес 1&nbsp;год`, `Устраним недостатки или заменим за&nbsp;свой счет в&nbsp;случае брака`)
 	// end sAdvantages
