--- a/sourse/pug/blocks/sCatalog/_sCatalog.pug
+++ b/sourse/pug/blocks/sCatalog/_sCatalog.pug
@@ -18,7 +18,7 @@ mixin sCatalog(data)
 						+e.slide.swiper-slide
 							+catalogItem(4, `Для бассейна`, `от 106 596 ₽`)
 						+e.slide.swiper-slide
-							+catalogItem(5, `Гаражи из&nbsp;СП`, `от 106 596 ₽`)
+							+catalogItem(5, `Гаражи из сэндвич-панелей`, `от 106 596 ₽`)
 						+e.slide.swiper-slide
 							+catalogItem(6, `Промышленные`, `от 106 596 ₽`)
 	// end sCatalog
