--- a/sourse/pug/blocks/sFilter/_sFilter.pug
+++ b/sourse/pug/blocks/sFilter/_sFilter.pug
@@ -37,7 +37,7 @@ mixin sFilter(data)
 										+in-c("checkbox", 'Комплекты гаражей')
 										+in-c("checkbox", 'Фермы')(checked)
 										+in-c("checkbox", 'Ангары')
-										+in-c("checkbox", 'Гаражи из СП')(checked)
+										+in-c("checkbox", 'Гаражи из сэндвич-панелей')(checked)
 										+in-c("checkbox", 'Козырьки')
 							.col-12
 								+ddGroupItem('Длина').active
@@ -108,7 +108,7 @@ mixin sFilter(data)
 										+in-c("checkbox", 'Ангары')
 										+in-c("checkbox", 'Беседка')(checked)
 										+in-c("checkbox", 'Ангары')
-										+in-c("checkbox", 'Гаражи из СП')(checked)
+										+in-c("checkbox", 'Гаражи из сэндвич-панелей')(checked)
 										+in-c("checkbox", 'Кованные навесы')
 							.col-md-6.col-lg-12
 								+ddGroupItem('Материал кровли').active
@@ -116,7 +116,7 @@ mixin sFilter(data)
 										+in-c("checkbox", 'Ангары')
 										+in-c("checkbox", 'Беседка')(checked)
 										+in-c("checkbox", 'Ангары')
-										+in-c("checkbox", 'Гаражи из СП')(checked)
+										+in-c("checkbox", 'Гаражи из сэндвич-панелей')(checked)
 										+in-c("checkbox", 'Кованные навесы')
 							.col-md-6.col-lg-12
 								+ddGroupItem('Тип каркаса').active
@@ -124,6 +124,6 @@ mixin sFilter(data)
 										+in-c("checkbox", 'Ангары')
 										+in-c("checkbox", 'Беседка')(checked)
 										+in-c("checkbox", 'Ангары')
-										+in-c("checkbox", 'Гаражи из СП')(checked)
+										+in-c("checkbox", 'Гаражи из сэндвич-панелей')(checked)
 										+in-c("checkbox", 'Кованные навесы')
 	// end sFilter
