--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -60,7 +60,7 @@ mixin top-nav()
 										li 
 											a(href="#") Заезды на&nbsp;участок
 										li 
-											a(href="#") Укладка тротуарной плитки
+											a(href="#") Мощение
 										li 
 											a(href="#") Ворота откатные и&nbsp;распашные
 										li 
@@ -113,7 +113,7 @@ mixin top-nav()
 									li 
 										a(href="#") Заезды на&nbsp;участок
 									li 
-										a(href="#") Укладка тротуарной плитки
+										a(href="#") Мощение
 									li 
 										a(href="#") Ворота откатные и&nbsp;распашные
 									li 
