--- a/sourse/pug/blocks/topLine/_topLine.pug
+++ b/sourse/pug/blocks/topLine/_topLine.pug
@@ -26,5 +26,5 @@ mixin topLine()
 								span Пн&ndash;Вс &bull; 9:00&ndash;21:00
 						.col-auto.d-none.d-md-flex
 							+b.label 
-								span Работаем с&nbsp;2012 года
+								span Строим навесы с&nbsp;2019&nbsp;года
 	// end topLine
