--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -45,12 +45,12 @@
 	}
 	.label {
 		background-color: $secondary;
-		width: rem(141);
+		width: auto;
 		height: rem(21);
 		clip-path: polygon(100% 0%, calc(100% - 12px) 50%, 100% 100%, 0 100%, 0 0);
 		@include media-breakpoint-up(lg) {
 			font-size: rem(14);
-			width: rem(199);
+			// width: rem(199);
 			height: rem(32);
 			clip-path: polygon(100% 0%, calc(100% - 20px) 50%, 100% 100%, 0 100%, 0 0);
 			margin-bottom: rem(16);
