--- a/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
+++ b/sourse/pug/blocks/sPortfolio/_sPortfolio.pug
@@ -4,7 +4,7 @@ mixin sPortfolio(data)
 		.container
 			+b.section-title.text-center
 				h4 Портфолио
-				h2 Мы&nbsp;изготовили и&nbsp;установили более 1500 навесов с&nbsp;2012 года
+				h2 Мы&nbsp;изготовили и&nbsp;установили 1333 навеса с&nbsp;2019 года
 			.row
 				.col-12
 					+sSpecifications()
