--- a/sourse/pug/blocks/sTypical/_sTypical.scss
+++ b/sourse/pug/blocks/sTypical/_sTypical.scss
@@ -132,9 +132,17 @@
 		// @include media-breakpoint-up(md) {
 		// 	max-width: 100%;
 		// }
+		padding: rem(16);
+		margin: rem(-16);
 	}
 	&__img-wrap {
 		cursor: pointer;
+		&:hover {
+			picture {
+				@include mt;
+				box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
+			}
+		}
 	}
 	&__item {
 		position: relative;
