--- a/sourse/pug/blocks/sProducts/_sProducts.pug
+++ b/sourse/pug/blocks/sProducts/_sProducts.pug
@@ -3,7 +3,7 @@ mixin sProducts(data)
 	+b.sProducts&attributes(attributes)
 		+e.filter
 			p Сортировать по:
-			+select('', 'Цене ↑', 'Цене ↓') 
+			+select('', 'Цена ↑', 'Цена ↓') 
 		.row
 			.col-md-6
 				+b.card
