--- a/sourse/pug/blocks/sFilter/_sFilter.pug
+++ b/sourse/pug/blocks/sFilter/_sFilter.pug
@@ -13,7 +13,7 @@ mixin sFilter(data)
 	// start sFilter
 	+b.sFilter&attributes(attributes)
 		.dd-group-js
-			.dd-head-js.d-flex.d-lg-none.justify-content-between
+			.dd-head-js.d-flex.d-lg-none.justify-content-between.active
 				| Показать фильтры
 				+icon('chevron-down')
 			+e.wrap.dd-content-js
