--- a/sourse/pug/blocks/sThanks/_sThanks.pug
+++ b/sourse/pug/blocks/sThanks/_sThanks.pug
@@ -5,9 +5,9 @@ mixin sThanks(data)
 			+b.section-title.text-center
 				h4 Ура!
 				h1 Спасибо за&nbsp;ваше обращение
-				p Мы&nbsp;работаем с&nbsp;понедельника по&nbsp;воскресенье с&nbsp;09:00 до&nbsp;21:00 и&nbsp;свяжемся с&nbsp;вами в&nbsp;рабочее время
+				p Мы&nbsp;свяжемся с&nbsp;вами в&nbsp;самое ближайшее время
 			+e.block
-				h6 Если вам срочно требуется связаться с&nbsp;нами:
+				h6 Связаться с&nbsp;нами прямо сейчас:
 				.row
 					.col-md-6.col-lg-auto
 						+e.contact(href="tel:+74952122320")
@@ -17,7 +17,7 @@ mixin sThanks(data)
 								+icon('phone-call')
 					.col-md-6.col-lg-auto
 						+e.contact(href="#")
-							p или напишите нам в&nbsp;WhatsApp
+							p напишите нам в&nbsp;WhatsApp
 							h4 +7 495 212 23 20
 							+e.icon-wrap
 								+icon('whatsapp')
@@ -34,7 +34,7 @@ mixin sThanks(data)
 							+e.btn(href="#") Перейти
 					.col-sm-6.col-lg-3
 						+e.link
-							h6 Посмотрите <br> наш инстаграм
+							h6 Посмотрите <br> наш Инстаграм
 							+e.btn(href="#") Перейти
 					.col-sm-6.col-lg-3
 						+e.link
