--- a/sourse/pug/pages/02-blog-page.pug
+++ b/sourse/pug/pages/02-blog-page.pug
@@ -41,13 +41,13 @@ block pagecontent
 			menu: 'menu'
 		})
 			+infoPanel()
-				+infoPanelItem(``, `Как выбрать`).--btn
+				+infoPanelItem(``, `Выбор навеса`).--btn
 				+infoPanelItem(``, `15.09.21`).--btn
 				+infoPanelItem(`eye`, `834`).--views
 				+infoPanelItem(`clock`, `5&nbsp;минут`).--time
 		//- +sContent()
 		+sBlogPage
-		+sBlog(``, `Продолжайте читать`).sBlog--content
+		+sBlog(``, `Узнать больше:`).sBlog--content
 		+sContact()
 		.section-wrapper.section-wrapper--footer
 			+footer()
