--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -201,7 +201,7 @@
 			}
 		}
 		&.sticky {
-				background-color: $light;
+			background-color: $light;
 		}
 	}
 	// &__row.fixed {
@@ -427,6 +427,11 @@
 	background-color: $light;
 	box-shadow: 0px 10px 13px rgba(0, 0, 0, 0.09);
 	border-radius: 16px;
+	h6 {
+		margin-bottom: rem(16);
+		text-align: center;
+		margin-top: rem(-6);
+	}
 	&__item {
 		display: flex;
 		align-items: center;
@@ -631,6 +636,10 @@
 		background-color: $white;
 		display: flex;
 		flex-direction: column;
+		// min-height: unset;
+		// @include media-breakpoint-up(md) {
+		// 	min-height: rem(320);
+		// }
 		.adv-item__title {
 			color: rgba($color: $body-color, $alpha: 0.5);
 		}
@@ -639,7 +648,15 @@
 			margin-bottom: rem(32);
 			// flex-grow: 1;
 		}
+		.adv-item__btn {
+			padding-left: rem(12);
+			padding-right: rem(12);
+		}
 	}
+	// .social {
+	// 	margin-top: auto;
+	// 	margin-bottom: auto;
+	// }
 }
 
 .social {
