--- a/sourse/pug/blocks/sBlog/_sBlog.pug
+++ b/sourse/pug/blocks/sBlog/_sBlog.pug
@@ -8,12 +8,13 @@ mixin sBlog(head, title)
 						+blogItem(1, `Навес для дома.&nbsp;7&nbsp;способов, как украсить участок и&nbsp;сделать жизнь комфортнее`)
 					.col-lg-4.col-xl-3.d-none.d-lg-block
 						+b.categories
+							h6 Категории
 							+categoryItem(`Советы <br> и&nbsp;лайфхаки`, 1).active
 							+categoryItem(`Технические <br> детали`, 2)
 							+categoryItem(`Безопасность <br> и&nbsp;гарантии`, 3)
 							+categoryItem(`Внешний <br> вид`, 4)
-							+categoryItem(`Как <br> выбрать`, 5)
-							+categoryItem(`Примеры <br> Наших работ`, 6)
+							+categoryItem(`Выбор <br> навеса`, 5)
+							+categoryItem(`Примеры <br> наших работ`, 6)
 			if title
 				.section-title.text-center
 					h2!= title
@@ -41,7 +42,7 @@ mixin sBlog(head, title)
 				.col-md-6
 					+blogItem(3, `Навес для дома.&nbsp;7&nbsp;способов, как украсить участок и&nbsp;сделать жизнь комфортнее`)
 				.col-md-6.col-lg-4.col-xl-3
-					+adv-item-white(`Наши соц. сети`, `Смотрите <br> и&nbsp;пишите`, ``)
+					+adv-item-white(``, `Посетите официальные сообщества в&nbsp;соц. сетях:`, ``)
 				.col-md-6.col-lg-8.col-xl-9
 					+blogItem(1, `8&nbsp;форм кровли для навесов`)
 				.col-md-6.col-lg-4.col-xl-6
@@ -61,7 +62,7 @@ mixin sBlog(head, title)
 				.col-md-6
 					+blogItem(3, `Навес для дома.&nbsp;7&nbsp;способов, как украсить участок и&nbsp;сделать жизнь комфортнее`)
 				.col-md-6.col-lg-4.col-xl-3
-					+adv-item-white(`Каталог`, `Бесплатно: замер, расчет сметы <br> и&nbsp;3D-макет`, `Получить даром`)
+					+adv-item-white(`Каталог`, `Замер, расчет сметы <br> и&nbsp;3D-макет`, `Получить бесплатно`)
 				.col-md-6.col-lg-8.col-xl-9
 					+blogItem(4, `Н8&nbsp;форм кровли для навесов`)
 	// end sBlog
